{
    "name": "Protagonist Input Actions",
    "maps": [
        {
            "name": "Normal",
            "id": "836effa2-4650-4bf8-b92f-02ee47a5b648",
            "actions": [
                {
                    "name": "OrientDelta",
                    "type": "Value",
                    "id": "6979c56e-1a1e-41ba-ba4b-dd9f2ffbed92",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "65e71a65-679b-467d-b0f9-dff64627c0a2",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false,invertY=false),ScaleVector2(x=0.004,y=0.004)",
                    "groups": "PC",
                    "action": "OrientDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}